Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59307

Copying Javascript URLs does not work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.10.0 Alpha
    • 5.8.0, 5.9.0 Beta 1
    • WebEngine
    • None
    • Archlinux
    • I2e49767e1cc9ec8324d230c1bf346e21d7b8d9bb

    Description

      When trying to copy a javascript: link (e.g. bookmarklets like the one on this page)) via the context menu, about:blank is copied instead.

      This is reproducible in the demobrowser and in other applications using the default context menu, and both on the 5.8 release and 5.9 with 55-based.

      Attachments

        For Gerrit Dashboard: QTBUG-59307
        # Subject Branch Project Status CR V

        Activity

          People

            davidsz Szabolcs David
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes