src/core/web_contents_view_qt.cpp
@@ -164,6 +164,7 @@ static inline WebEngineContextMenuData fromParams(const content::ContextMenuPara
     ret.setPosition(QPoint(params.x, params.y));
     ret.setLinkUrl(toQt(params.link_url));
     ret.setLinkText(toQt(params.link_text.data()));
+    ret.setUnfilteredLinkUrl(toQt(params.unfiltered_link_url));
     ret.setSelectedText(toQt(params.selection_text.data()));
     ret.setMediaUrl(toQt(params.src_url));
     ret.setMediaType((WebEngineContextMenuData::MediaType)params.media_type);
